# troudecul

server/: CMakeLists.txt  main.cpp
server/game/: Events.h  Game.cpp  Game.h  Player.cpp  Player.h  Round.cpp  Round.h  cards.h  json.cpp  json.h
server/http/: websockets.h
server/test/: CMakeLists.txt  cards-tests.cpp  game-tests.cpp  json-tests.cpp  player-tests.cpp
www/: index.html
www/css/: style.css
